2016-02-04  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-425
	
	* CMakeLists.txt, CHANGES-2.3, README:

	Don't enable NetCDF support by default. It's very limited and hardly
	used. Can be enabled if needed with a cmake option.

	* src/CMakeLists.txt:

	Only add NetCDF source files to artscore lib if enabled.

	* src/methods.cc: Don't mask % with \.

	* src/m_tmatrix.cc (scat_data_singleTmatrix):

	Add two explicit casts to Numeric to avoid compiler warning.

2016-02-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-424
	
	Trying to make ARTS-DISORT work somewhat properly, closing a couple of traps
	and loopholes, fixing bugs.
	
  * src/m_disort.cc (DisortCalc):
  Replaced surface_emissivity_field with surface_scalar_reflectivity - lat/lon
  dependence wasn't used anyways, now allowing for frequency dependent surface
  reflectivity.
  Bit of restructuring code. Checks for only p20-type particles and identical
  scattering grids added. Both are implicitly assumed by the code, but weren't
  checked potentially causing significant errors. Angle grid size check added
  (see DOAngularGridsSet below), allowing only even numbers (DISORT can not
  really handle 90deg polar angles, so we should avoid them).
  Changed from using isotropic incoming rad at TOA to blackbody source cosmic
  background temp at TOA (both are possible. but setting TOA emisivity to 0
  seemed dangerous as it potentially causes the TOA boundary to reflect. though
  that's not considered in the DISORT version we use so far).
  Bugfix in assigning DISORT output to doit_i_field levels.

  * src/disort.cc
  (phase_functionCalc): Calc scat coef only once for each atm level (DISORT
  handling only p20, i.e. scat coef independent of polar angle).
  Bugfix: loop over number of scatt elements of each species. This fixes the
  non-normailzation complaints of pmomCalc.
  Moved pfct normalization with scat coef outside of sum-over-scatelements loops.